--- a/src/landing_page/index.html
+++ b/src/landing_page/index.html
@@ -16,58 +16,130 @@
 <body>
   <div class='animsition'>
     <div class='lot-landingpage'>
-      <!-- Start slider -->
-      <div class='story-slider'>
-        <div id='jamesBlake' class='slide slide--has-caption'>
-          <div class='caption'>
-            <div class='caption__title'>
-              <span>story</span>
-              <span class='episode-number'>EP. 01</span>
-            </div>
-            <div class='caption__content'>
-              <h2 class='content-title'>James Blake</h2>
-              <div class='content-body'>
-                <div class='content-link'>
-                  <span class='divider'></span>
-                  <a href='#' class='story-link'>See the story <i class='ti-arrow-right'></i></a>
-                </div>
-                <div class='content-description'>
-                  <p>
-                    Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.
-                  </p>
+      <header class='slider-container'>
+        <!-- Start slider -->
+        <div class='story-slider'>
+          <div id='jamesBlake' class='slide slide--has-caption'>
+            <div class='caption'>
+              <div class='caption__title'>
+                <span class='story-label'>story</span>
+                <span class='episode-number'>EP. 01</span>
+              </div>
+              <div class='caption__content'>
+                <h2 class='content-title'>James Blake</h2>
+                <div class='content-body'>
+                  <div class='content-link'>
+                    <span class='divider'></span>
+                    <a href='#' class='story-link'>See the story <i class='ti-arrow-right'></i></a>
+                  </div>
+                  <div class='content-description'>
+                    <p>
+                      Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.
+                    </p>
+                  </div>
                 </div>
               </div>
             </div>
           </div>
+          <div>
+            <h3>2</h3>
+          </div>
+          <div>
+            <h3>3</h3>
+          </div>
+          <div>
+            <h3>4</h3>
+          </div>
+          <div>
+            <h3>5</h3>
+          </div>
         </div>
-        <div>
-          <h3>2</h3>
+        <!-- End Section -->
+
+        <!-- Start Thumbnail Slider -->
+        <div class='thumbnail-slider'>
+          <a class='poster-link' href='/'>
+            <figure id='jamesBlakeFig' class='poster-image'>
+              <div class='poster-title'>
+                <h4>EP.01</h4>
+                <h5>JAMES BLAKE</h5>
+              </div>
+              <div class='image default-poster'></div>
+              <div class='image hover-poster'></div>
+            </figure>
+          </a>
+          <a class='poster-link' href='/'>
+            <figure id='ep2Fig' class='poster-image'>
+              <div class='poster-title'>
+                <h4>EP.02</h4>
+                <h5>COMING SOON</h5>
+              </div>
+              <div class='image default-poster'></div>
+              <div class='image hover-poster'></div>
+            </figure>
+          </a>
+          <a class='poster-link' href='/'>
+            <figure id='ep3Fig' class='poster-image'>
+              <div class='poster-title'>
+                <h4>EP.03</h4>
+                <h5>COMING SOON</h5>
+              </div>
+              <div class='image default-poster'></div>
+              <div class='image hover-poster'></div>
+            </figure>
+          </a>
+          <a class='poster-link' href='/'>
+            <figure id='ep4Fig' class='poster-image'>
+              <div class='poster-title'>
+                <h4>EP.04</h4>
+                <h5>COMING SOON</h5>
+              </div>
+              <div class='image default-poster'></div>
+              <div class='image hover-poster'></div>
+            </figure>
+          </a>
+          <a class='poster-link' href='/'>
+            <figure id='ep5Fig' class='poster-image'>
+              <div class='poster-title'>
+                <h4>EP.05</h4>
+                <h5>COMING SOON</h5>
+              </div>
+              <div class='image default-poster'></div>
+              <div class='image hover-poster'></div>
+            </figure>
+          </a>
         </div>
-        <div>
-          <h3>3</h3>
+        <!-- End Section -->
+      </header>
+
+      <main class='body-content'>
+        <div class='overlay-content'>
+          <h4 data-aos="fade-left" data-aos-duration="1000" data-aos-easing="ease-in-out-back">THOSE WHO <b>INSPIRE</b> US</h4>
+          <img data-aos="fade-right" data-aos-duration="1000" data-aos-easing="ease-in-out-back" src='/media/images/lot_logo.png' alt="Life On Tour" />
+          <p data-aos="fade-up" data-aos-easing="ease-in-out-back" data-aos-duration="1000" data-aos-delay="100">
+            Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.
+          </p>
         </div>
-        <div>
-          <h3>4</h3>
+      </main>
+      <!-- Start Body Content -->
+
+      <!-- Start Mobile Only -->
+      <section class="story">
+        <div class="story-header">
+
         </div>
-        <div>
-          <h3>5</h3>
+        <div class="story-content">
+          
         </div>
-      </div>
+      </section>
       <!-- End Section -->
 
-      <!-- Start Thumbnail Slider -->
-      <div class='thumbnail-slider'>
-        <a class='poster-link' href='/'>
-          <figure id='jamesBlakeFig' class='poster-image'>
-            <div class='image default-poster'></div>
-            <div class='image hover-poster'></div>
-          </figure>
-        </a>
-        <a class='poster-link' href='/'>2</a>
-        <a class='poster-link' href='/'>3</a>
-        <a class='poster-link' href='/'>4</a>
-        <a class='poster-link' href='/'>5</a>
-      </div>
+      <!-- End Section -->
+
+      <!-- Start Footer -->
+      <footer class='footer-content'>
+
+      </footer>
       <!-- End Section -->
     </div>
   </div>
