added dep: plyr.js, created: james_blake feature page

--- a/src/features/james_blake.html
+++ b/src/features/james_blake.html
@@ -16,7 +16,8 @@
 <body>
   <div class='animsition'>
     <section class="feature-page">
-      <h1>James Blake</h1>
+      <div data-type="youtube" data-video-id="ctvlUvN6wSE">
+      </div>
     </section>
   </div>
 </body>
