--- a/src/intro_page/index.html
+++ b/src/intro_page/index.html
@@ -14,13 +14,11 @@
 </head>
 
 <body>
-  <div class='animsition'>
-    <div class='lot-intropage'>
-      <p id='timerText' class='redirect-text'>Redirecting in 3</p>
+  <div class='animsition blog-page'>
+    <div class='intro-content'>
+      <p id='timerText' class='text-paragraph'>Redirecting in 3</p>
       <div class='opacity-mask'></div>
-      <div class='image-wrapper'>
-        <img id='introImg' src='/media/images/lot_logo.png' alt="Life On Tour" />
-      </div>
+      <img class='image' src='/media/images/lot_logo.png' alt="Life On Tour" />
     </div>
   </div>
 </body>
